// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for default tabs 1`] = `
<div
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r2b:-content-tab1"
      aria-selected="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-:r2b:-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="radix-:r2b:-content-tab2"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-:r2b:-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    aria-labelledby="radix-:r2b:-trigger-tab1"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="active"
    id="radix-:r2b:-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content 1
  </div>
  <div
    aria-labelledby="radix-:r2b:-trigger-tab2"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-:r2b:-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;

exports[`Tabs Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for disabled tabs 1`] = `
<div
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r2h:-content-tab1"
      aria-selected="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-:r2h:-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="radix-:r2h:-content-tab2"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
      data-disabled=""
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      disabled=""
      id="radix-:r2h:-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    aria-labelledby="radix-:r2h:-trigger-tab1"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="active"
    id="radix-:r2h:-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content 1
  </div>
  <div
    aria-labelledby="radix-:r2h:-trigger-tab2"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-:r2h:-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;

exports[`Tabs Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for multiple tab groups 1`] = `
<div>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-:r2k:-content-group1-tab1"
        aria-selected="true"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-:r2k:-trigger-group1-tab1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Group 1 Tab 1
      </button>
      <button
        aria-controls="radix-:r2k:-content-group1-tab2"
        aria-selected="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-:r2k:-trigger-group1-tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Group 1 Tab 2
      </button>
    </div>
    <div
      aria-labelledby="radix-:r2k:-trigger-group1-tab1"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="active"
      id="radix-:r2k:-content-group1-tab1"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Group 1 Content 1
    </div>
    <div
      aria-labelledby="radix-:r2k:-trigger-group1-tab2"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r2k:-content-group1-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
  <div
    data-orientation="horizontal"
    dir="ltr"
  >
    <div
      aria-orientation="horizontal"
      class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground"
      data-orientation="horizontal"
      role="tablist"
      style="outline: none;"
      tabindex="0"
    >
      <button
        aria-controls="radix-:r2n:-content-group2-tab1"
        aria-selected="true"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="active"
        id="radix-:r2n:-trigger-group2-tab1"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Group 2 Tab 1
      </button>
      <button
        aria-controls="radix-:r2n:-content-group2-tab2"
        aria-selected="false"
        class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow"
        data-orientation="horizontal"
        data-radix-collection-item=""
        data-state="inactive"
        id="radix-:r2n:-trigger-group2-tab2"
        role="tab"
        tabindex="-1"
        type="button"
      >
        Group 2 Tab 2
      </button>
    </div>
    <div
      aria-labelledby="radix-:r2n:-trigger-group2-tab1"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="active"
      id="radix-:r2n:-content-group2-tab1"
      role="tabpanel"
      style="animation-duration: 0s;"
      tabindex="0"
    >
      Group 2 Content 1
    </div>
    <div
      aria-labelledby="radix-:r2n:-trigger-group2-tab2"
      class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2"
      data-orientation="horizontal"
      data-state="inactive"
      hidden=""
      id="radix-:r2n:-content-group2-tab2"
      role="tabpanel"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`Tabs Component - Comprehensive UI Testing Snapshot Testing for UI Consistency should match snapshot for tabs with custom styling 1`] = `
<div
  class="custom-tabs"
  data-orientation="horizontal"
  dir="ltr"
>
  <div
    aria-orientation="horizontal"
    class="inline-flex h-9 items-center justify-center rounded-lg bg-muted p-1 text-muted-foreground custom-tabs-list"
    data-orientation="horizontal"
    role="tablist"
    style="outline: none;"
    tabindex="0"
  >
    <button
      aria-controls="radix-:r2e:-content-tab1"
      aria-selected="true"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow custom-tab-trigger"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="active"
      id="radix-:r2e:-trigger-tab1"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 1
    </button>
    <button
      aria-controls="radix-:r2e:-content-tab2"
      aria-selected="false"
      class="inline-flex items-center justify-center whitespace-nowrap rounded-md px-3 py-1 text-sm font-medium ring-offset-background transition-all focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 disabled:pointer-events-none disabled:opacity-50 data-[state=active]:bg-background data-[state=active]:text-foreground data-[state=active]:shadow custom-tab-trigger"
      data-orientation="horizontal"
      data-radix-collection-item=""
      data-state="inactive"
      id="radix-:r2e:-trigger-tab2"
      role="tab"
      tabindex="-1"
      type="button"
    >
      Tab 2
    </button>
  </div>
  <div
    aria-labelledby="radix-:r2e:-trigger-tab1"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 custom-tab-content"
    data-orientation="horizontal"
    data-state="active"
    id="radix-:r2e:-content-tab1"
    role="tabpanel"
    style="animation-duration: 0s;"
    tabindex="0"
  >
    Content 1
  </div>
  <div
    aria-labelledby="radix-:r2e:-trigger-tab2"
    class="mt-2 ring-offset-background focus-visible:outline-none focus-visible:ring-2 focus-visible:ring-ring focus-visible:ring-offset-2 custom-tab-content"
    data-orientation="horizontal"
    data-state="inactive"
    hidden=""
    id="radix-:r2e:-content-tab2"
    role="tabpanel"
    tabindex="0"
  />
</div>
`;
